--- a/Evaluacion Final/Pagina/asistema.html
+++ b/Evaluacion Final/Pagina/asistema.html
@@ -58,7 +58,7 @@
                                 </nav>
                             </div>
                             <div class="sb-sidenav-menu-heading">Addons</div>
-                           <a class="nav-link" href="sistema.html"
+                           <a class="nav-link" href="asiteama.html"
                                 ><div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Tables</a
                             >
