--- a/Evaluacion Final/Pagina/index.html
+++ b/Evaluacion Final/Pagina/index.html
@@ -8,21 +8,20 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>inicio</title>
+  <title>Bienvenidos</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js"
-    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 </head>
 
 <body>
   <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">más información.</a><!-- Navbar Search-->
+    <a class="navbar-brand" href="index.html">Titulo Empresa</a><!-- Navbar Search-->
     <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
       <div class="input-group">
       </div>
@@ -35,6 +34,9 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
           <a class="dropdown-item" href="login.html">Iniciar Sesion</a>
           <a class="dropdown-item" href="register.html">Registro</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="servicios.html">Servicios</a>
+          <a class="dropdown-item" href="contact.html">Contacto</a>
         </div>
       </li>
     </ul>
@@ -48,17 +50,18 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item active"
+          style="background-image: url('https://cdn.wallpapersafari.com/74/65/CZfocg.jpg')">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url('https://wallpaperaccess.com/full/1471274.jpg')">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url('https://cdn.wallpapersafari.com/97/61/g7MX3j.png')">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -81,11 +84,11 @@
 
     <h3>Nuestra compañía</h3>
 
-      <p>
-        Somos una compañía chilena sin fines de lucro, que busca innovar y ayudarte a cambiar tu vida. <br>
-        Hacemos tus sueños realidad.
-    
-      </p>
+    <p>
+      Somos una compañía chilena sin fines de lucro, que busca innovar y ayudarte a cambiar tu vida. <br>
+      Hacemos tus sueños realidad.
+
+    </p>
     <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
 
@@ -110,7 +113,6 @@
             <a href="https://unsplash.com/photos/ty4X72BSsXY"></a>
           </figcaption>
         </figure>
-
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
 
@@ -195,8 +197,8 @@
         }
       });
     </script>
-      <!--  #3 -->
-    </div>
+    <!--  #3 -->
+  </div>
   <!-- /.container -->
 
   <!-- Footer -->
