--- a/Evaluacion Final/Pagina/register.html
+++ b/Evaluacion Final/Pagina/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -42,7 +42,7 @@
                                         </form>
                                     </div>
                                     <div class="card-footer text-center">
-                                        <div class="small"><a href="register.html">¿Posee una cuenta? inicie sesion aquí.</a></div>
+                                        <div class="small"><a href="login.html">¿Posee una cuenta? inicie sesion aquí.</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -50,6 +50,7 @@
                     </div>
                 </main>
             </div>
+            <br>
             <div id="layoutAuthentication_footer">
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid">
