--- a/Evaluacion Final/Pagina/password.html
+++ b/Evaluacion Final/Pagina/password.html
@@ -1,57 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Recuperar clave</title>
-        <link href="css/styles.css" rel="stylesheet" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" crossorigin="anonymous"></script>
-    </head>
-    <body class="bg-primary">
-        <div id="layoutAuthentication">
-            <div id="layoutAuthentication_content">
-                <main>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-5">
-                                <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Recuperar contraseña</h3></div>
-                                    <div class="card-body">
-                                    <div class="small mb-3 text-muted">Ingrese su mail para recuperar la contraseña.</div>
-                                        <form>
-                                            <div class="form-group"><label class="small mb-1" for="inputEmailAddress">Mail</label><input class="form-control py-4" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Ingrese mail" /></div>
-                                            <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0"><a class="small" href="login.html">Volver atrás</a><a class="btn btn-primary" href="login.html">Restaurar contraseña</a></div>
-                                        </form>
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Recuperar clave</title>
+    <link href="css/styles.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js"
+        crossorigin="anonymous"></script>
+</head>
+
+<body class="bg-primary">
+    <div id="layoutAuthentication">
+        <div id="layoutAuthentication_content">
+            <main>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-5">
+                            <div class="card shadow-lg border-0 rounded-lg mt-5">
+                                <div class="card-header">
+                                    <h3 class="text-center font-weight-light my-4">Recuperar contraseña</h3>
+                                </div>
+                                <div class="card-body">
+                                    <div class="small mb-3 text-muted">Ingrese su mail para recuperar la contraseña.
                                     </div>
-                                    <div class="card-footer text-center">
-                                        <div class="small"><a href="register.html">¿Necesita una cuenta? Ingrese aquí</a></div>
+                                    <form>
+                                        <div class="form-group"><label class="small mb-1"
+                                                for="inputEmailAddress">Mail</label><input class="form-control py-4"
+                                                id="inputEmailAddress" type="email" aria-describedby="emailHelp"
+                                                placeholder="Ingrese mail" /></div>
+                                        <div
+                                            class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
+                                            <a class="small" href="login.html">Volver atrás</a><a
+                                                class="btn btn-primary" href="login.html">Restaurar contraseña</a></div>
+                                    </form>
+                                </div>
+                                <div class="card-footer text-center">
+                                    <div class="small"><a href="register.html">¿Necesita una cuenta? Ingrese aquí</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </main>
-            </div>
-            <div id="layoutAuthentication_footer">
-                <footer class="py-4 bg-light mt-auto">
-                    <div class="container-fluid">
-                        <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">SantiagoPost 2020, Copyright Todos los derechos reservados.</div>
-                            <div>
-                                <a href="#">Politicas de privacidad</a>
-                                &middot;
-                                <a href="#">Terminos y condiciones.</a>
-                            </div>
+                </div>
+            </main>
+        </div>
+        <br>
+        <div id="layoutAuthentication_footer">
+            <footer class="py-4 bg-light mt-auto">
+                <div class="container-fluid">
+                    <div class="d-flex align-items-center justify-content-between small">
+                        <div class="text-muted">SantiagoPost 2020, Copyright Todos los derechos reservados.</div>
+                        <div>
+                            <a href="#">Politicas de privacidad</a>
+                            &middot;
+                            <a href="#">Terminos y condiciones.</a>
                         </div>
                     </div>
-                </footer>
-            </div>
+                </div>
+            </footer>
         </div>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
-    </body>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
+</body>
+
 </html>
